--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">KitchenMaterial</string>
+    <string name="app_name">BarcodeReader</string>
 
-    <string name="activity_title_example">Example Activity</string>
+    <string name="activity_title_example">Barcode Scanner</string>
 
     <string name="dialog_action_ok">OK</string>
     <string name="dialog_action_cancel">CANCEL</string>
